/gcc 2017-10-11  Qing Zhao  <qing.zhao@oracle.com>

PR target/81422
	* config/aarch64/aarch64.c (aarch64_load_symref_appropriately):
	Check whether the dest is REG before adding REG_EQUIV note.

/gcc/testsuite
2017-10-11  Qing Zhao  <qing.zhao@oracle.com>

	PR target/81422
      	* gcc.target/aarch64/pr81422.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@253657 138bc75d-0d04-0410-961f-82ee72b054a4